# emrooz

./: .gitignore  Makefile  README.md  set_env
apps/instagram-analyzer/frontend/: .gitignore  Makefile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/language-learning/: plan.md
apps/language-learning/backend/: Makefile  pyproject.toml
apps/language-learning/backend/src/language_learning/: main.py
apps/language-learning/frontend/: Makefile  package.json
apps/personal-finance/: plan.md
apps/personal-finance/backend/: Makefile  pyproject.toml
apps/personal-finance/frontend/: Makefile  package.json
apps/spike-sync/: .gitignore  Makefile  index.html  package-lock.json  package.json
apps/spike-sync/scripts/: init-icons.mjs
apps/spike-sync/src/: App.tsx  main.tsx  styles.css
apps/spike-sync/src-tauri/: Cargo.toml  tauri.conf.json
apps/spike-sync/src-tauri/capabilities/: default.json
apps/spike-sync/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md
infrastructure/: Makefile  README.md
infrastructure/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
libs/python/emrooz_common/: pyproject.toml
packaging/instagram-analyzer/: Makefile
packaging/language-learning/: Makefile
packaging/personal-finance/: Makefile
packaging/python-base/: Dockerfile
scripts/: lint-all.sh  new-app.sh
sites/emrooz/: Makefile  package-lock.json  package.json
sites/emrooz/src/content/: config.ts
(+44 files in other folders)
