[project]
name = "language-learning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
emrooz-common = { path = "../../../libs/python/emrooz_common", editable = true }

[tool.ruff]
src = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
