[package]
name = "spike-sync"
version = "0.0.1"
description = "Phase 0 spike for emrooz MRU sync"
authors = ["Daniel Sanchez"]
edition = "2021"

[lib]
name = "spike_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
